兴趣接口调整
