# lingua_exchange/docs/swagger.json
@@ -383,7 +383,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "globalConfig"
+                    "globalConfigma"
                 ],
                 "summary": "get user login method",
                 "responses": {
@@ -446,13 +446,6 @@
                         "schema": {
                             "$ref": "#/definitions/types.VerificationCodeReq"
                         }
-                    },
-                    {
-                        "type": "string",
-                        "description": "dev mode",
-                        "name": "env",
-                        "in": "header",
-                        "required": true
                     }
                 ],
                 "responses": {
@@ -504,7 +497,7 @@
                 }
             }
         },
-        "/api/v1/interests/allList/{language_code}": {
+        "/api/v1/interests/allList/{languageCode}": {
             "get": {
                 "security": [
                     {
@@ -525,8 +518,29 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "language_code",
-                        "name": "language_code",
+                        "description": "token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "platform - ios/android",
+                        "name": "platform",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "deviceToken device id",
+                        "name": "deviceToken",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "languageCode",
+                        "name": "languageCode",
                         "in": "path",
                         "required": true
                     }
@@ -3796,11 +3810,8 @@
                 "data": {
                     "type": "object",
                     "properties": {
-                        "loginMethods": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/types.LoginMethodDetailReply"
-                            }
+                        "loginMethod": {
+                            "$ref": "#/definitions/types.LoginMethodDetailReply"
                         }
                     }
                 },
