# lingua_exchange/internal/routers/interests.go
@@ -16,14 +16,14 @@ func init() {
 func interestsTranslationsRouter(group *gin.RouterGroup, h handler.InterestsHandler) {
 	g := group.Group("/interests", jwt.AuthMiddleware())
 
+	g.GET("/allList/:languageCode", h.AllList) // [get] /api/v1/interests/AllList:language_code
 	// All the following routes use jwt authentication, you also can use middleware.Auth(middleware.WithVerify(fn))
 	// g.Use(middleware.Auth())
 
 	// If jwt authentication is not required for all routes, authentication middleware can be added
 	// separately for only certain routes. In this case, g.Use(middleware.Auth()) above should not be used.
 
-	g.GET("/allList/:language_code", h.AllList) // [get] /api/v1/interests/AllList:language_code
-	// g.POST("/", h.Create)          // [post] /api/v1/interestsTranslations
+	// g.POST("/", h.Create) // [post] /api/v1/interestsTranslations
 	// g.DELETE("/:id", h.DeleteByID) // [delete] /api/v1/interestsTranslations/:id
 	// g.PUT("/:id", h.UpdateByID)    // [put] /api/v1/interestsTranslations/:id
 	// g.GET("/:id", h.GetByID)       // [get] /api/v1/interestsTranslations/:id
